Elements in Shadow DOM are wrongly marked as stale by the WebDriver https://bugs.webkit.org/show_bug.cgi?id=217635

Patch by Nitzan Uziely <linkgoron@gmail.com> on 2020-10-22
Reviewed by Brian Burg.

Source/WebDriver:

Changed stale checking, to check if the root node is the document element,
instead of document.contains which doesn't work for elements in Shadow DOM.

* Session.cpp:
(WebDriver::Session::elementSendKeys):

Source/WebKit:

Fixed the focus script to work for elements in Shadow DOM
instead of declaring them as not interactable.

* WebProcess/Automation/WebAutomationSessionProxy.js:
(let.AutomationSessionProxy.prototype._clearStaleNodes):
(let.AutomationSessionProxy):

Canonical link: https://commits.webkit.org/230795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268867 268f45cc-cd09-0410-ab3c-d52691b4dbfc